--- a/Style.css
+++ b/Style.css
@@ -12,28 +12,30 @@
 }
 p
 {
-	color: gray; /*couleur paragraphe */
+	color: #545454; /*couleur paragraphe */
 	font-size: 1.2em;
 	font-family: abelregular, Arial, Verdana, Trebuchet MS, sans-serif;
 }
 .blue
 {
-	color: blue; 
+	color: #00bf89; 
 }
 h3
 {
 	font-size: 1.5em;
 	font-family: abelregular, sans-serif;
-	color: red;
+	color: black;
 }
 h3
 {
-	border-top: 3px red double;
+	border-bottom: 3px #00bf89 double;
+	text-shadow: 1.5px 1.5px 2px #545454
 }
 h1
 {
 	font-size: 2em;
 	font-family: abelregular, "Arial Black", sans-serif;
+	text-shadow: 1.5px 1.5px 2px #545454
 }
 .float
 {
