--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,6 @@
          url('Fonts/abel-regular-webfont.svg#abelregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 p
 {
@@ -41,4 +40,8 @@ h1
 .stopfloat
 {
     clear: both;
+}
+.bold
+{
+	font-weight: bold;
 }
