--- a/Style.css
+++ b/Style.css
@@ -45,9 +45,6 @@ h1
 	justify-content: center;
 }
 
-
-
-
 /*partie de gauche*/
 aside
 {
@@ -72,6 +69,7 @@ aside img
 	font-family: abelregular, sans-serif;
 	color: #FFEBCD;
 	text-shadow: 1px 1px 2px #545454
+	font-size: 1.5em;
 
 }
 a
@@ -84,13 +82,22 @@ a:hover
 	text-decoration: underline;
     color: black;
 }
-
+.aside_loisir_icons
+{
+	display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    font-size: 2em;
+    margin-right: 10px;
+	margin-left: 10px;
+}
 
 
 
 /*partie de droite*/
 section 
 {
+	
 	background-color: #FFEBCD;
 	padding: auto;
     padding-right: 20px;
@@ -102,5 +109,16 @@ section
 	border-bottom: 3px #FF6347 double;
 	font-family: abelregular, sans-serif;
 	color: black;
-	text-shadow: 1px 1px 2px #545454
+	text-shadow: 1px 1px 2px #545454;
+	margin-top: 50px;
+}
+i
+{
+	margin-right: 10px;
+	margin-left: 10px;
+	font-size: 1.5em;
+}
+.date
+{
+	/*???????????*/
 }
