--- a/Style.css
+++ b/Style.css
@@ -20,6 +20,7 @@ h1
 	font-family: abelregular, "Arial Black", sans-serif;
 	text-shadow: 1.5px 1.5px 2px #545454;
 	text-align: center;
+	margin: -20px;
 }
 .float
 {
@@ -33,7 +34,11 @@ h1
 {
 	font-weight: bold;
 }
-
+h3
+{
+	font-family: abelregular, sans-serif;
+	text-shadow: 1px 1px 2px #545454;
+}
 
 
 /* FLEXBOX */
@@ -54,7 +59,6 @@ aside
     flex: 1;
     color:#FFEBCD; 
     text-align: justify;
-    padding: auto;
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -66,11 +70,12 @@ aside img
 .left_title
 {
 	text-align: center;
-	font-family: abelregular, sans-serif;
 	color: #FFEBCD;
-	text-shadow: 1px 1px 2px #545454
-	font-size: 1.5em;
-
+	font-size: 1.4em;
+	background-color: silver;
+	width: 100%;
+	margin-left: -20px;
+	margin-right: -20px;
 }
 a
 {
@@ -107,9 +112,7 @@ section
 .right_title
 {
 	border-bottom: 3px #FF6347 double;
-	font-family: abelregular, sans-serif;
 	color: black;
-	text-shadow: 1px 1px 2px #545454;
 	margin-top: 50px;
 }
 i
