--- a/Style.css
+++ b/Style.css
@@ -11,7 +11,7 @@
 }
 p
 {
-	font-size: 1.2em;
+	font-size: 1.3em;
 	font-family: abelregular, Arial, Verdana, Trebuchet MS, sans-serif;
 }
 h1
@@ -48,32 +48,36 @@ h3
 	flex-direction: row-reverse;
 	flex-wrap: nowrap;
 	justify-content: center;
+	
 }
 
 /*partie de gauche*/
 aside
-{
+{  /*une partie disparait quand on rétrécit la page en largeur*/
     display: flex;
     flex-direction: column;
     background-color:#FF6347;
     flex: 1;
+    max-width: 400px;
+    min-width: 300px;
     color:#FFEBCD; 
     text-align: justify;
     padding-right: 20px;
     padding-left: 20px;
 }
 aside img
-{
-    border: 5px solid rgba(100,100,100,0.5);
-    border-radius: 50px;
+{ /* L'IMAGE DOIT RESTER CENTRER */
+    border: 5px solid rgba(163,24,0,0.5);
+    border-radius: 200px;
 }
 .left_title
 {
 	text-align: center;
 	color: #FFEBCD;
 	font-size: 1.4em;
-	background-color: silver;
-	width: 100%;
+	background-color: rgba(163,24,0,0.5);
+	margin-bottom: 20px;
+	margin-top: 20px;
 	margin-left: -20px;
 	margin-right: -20px;
 }
@@ -87,10 +91,10 @@ a:hover
 	text-decoration: underline;
     color: black;
 }
-.aside_loisir_icons
+.aside_loisir_icons /*loisir doit rester en bas de la page!!!*/
 {
 	display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: 20px;
     font-size: 2em;
     margin-right: 10px;
@@ -102,18 +106,26 @@ a:hover
 /*partie de droite*/
 section 
 {
-	
+	flex: 2;
 	background-color: #FFEBCD;
 	padding: auto;
     padding-right: 20px;
     padding-left: 20px;
+    min-width: 500px;
+    max-width: 1000px;
 
 }
+
 .right_title
 {
 	border-bottom: 3px #FF6347 double;
 	color: black;
 	margin-top: 50px;
+}
+.right_text
+{
+	/*décaler les dates et le texte*/
+	flex: 2;
 }
 i
 {
@@ -123,5 +135,9 @@ i
 }
 .date
 {
-	/*???????????*/
+	/*décaler les dates et le texte*/
+	flex: 1;
+	
 }
+
+
