--- a/Style.css
+++ b/Style.css
@@ -9,6 +9,7 @@
     font-weight: normal;
     font-style: normal;
 }
+/*------------------------------------------------------------------------------------------------------------*/
 p
 {
 	font-size: 1.3em;
@@ -22,14 +23,6 @@ h1
 	text-align: center;
 	margin: -20px;
 }
-.float
-{
-	float: left;
-}
-.stopfloat
-{
-    clear: both;
-}
 .bold
 {
 	font-weight: bold;
@@ -40,6 +33,7 @@ h3
 	text-shadow: 1px 1px 2px #545454;
 }
 
+/*------------------------------------------------------------------------------------------------------------*/
 
 /* FLEXBOX */
 #container
@@ -47,9 +41,10 @@ h3
 	display: flex;
 	flex-direction: row-reverse;
 	flex-wrap: nowrap;
-	justify-content: center;
-	
+	justify-content: center;	
 }
+
+/*------------------------------------------------------------------------------------------------------------*/
 
 /*partie de gauche*/
 aside
@@ -57,8 +52,7 @@ aside
     display: flex;
     flex-direction: column;
     background-color:#FF6347;
-    flex: 1;
-    max-width: 400px;
+    max-width: 500px;
     min-width: 300px;
     color:#FFEBCD; 
     text-align: justify;
@@ -66,9 +60,14 @@ aside
     padding-left: 20px;
 }
 aside img
-{ /* L'IMAGE DOIT RESTER CENTRER */
+{
     border: 5px solid rgba(163,24,0,0.5);
     border-radius: 200px;
+}
+.img
+{
+	 text-align: center;
+	 margin-top: 20px;
 }
 .left_title
 {
@@ -101,33 +100,30 @@ a:hover
 	margin-left: 10px;
 }
 
-
+/*------------------------------------------------------------------------------------------------------------*/
 
 /*partie de droite*/
-section 
+
+#right_part
 {
-	flex: 2;
-	background-color: #FFEBCD;
-	padding: auto;
-    padding-right: 20px;
-    padding-left: 20px;
-    min-width: 500px;
-    max-width: 1000px;
-
+		display: flex;
+		flex: 2;
+		flex-direction: column;
+		flex-direction: row;
+		justify-content: space-between;
+		background-color: #FFEBCD; /* pourquoi la couleur ne marche pas?*/
+		padding: auto;
+    	padding-right: 20px;
+    	padding-left: 20px;
+    	min-width: 500px;
 }
-
 .right_title
 {
 	border-bottom: 3px #FF6347 double;
 	color: black;
 	margin-top: 50px;
 }
-.right_text
-{
-	/*décaler les dates et le texte*/
-	flex: 2;
-}
-i
+i /*ICON*/
 {
 	margin-right: 10px;
 	margin-left: 10px;
@@ -135,9 +131,16 @@ i
 }
 .date
 {
-	/*décaler les dates et le texte*/
-	flex: 1;
-	
+	width: 20%;
+	margin-right: 800px;
 }
-
+.right_text
+{
+	/*A ALIGNER AVEC DATE*/
+	margin-top: -75px;
+	margin-bottom: 50px;
+	margin-left: 20%;
+	margin-right: 20%;
+	min-width: 500px;
+}
 
