--- a/Style.css
+++ b/Style.css
@@ -82,10 +82,6 @@ aside img
 	 text-align: center;
 	 margin-top: 20px;
 }
-.loisir
-{
-	margin-top: 680px; /*A MODIFIER NE MARCHE PAS QUAND ON REDUIT LA PAGE EN LARGEUR*/
-}
 aside h3
 {
 	text-align: center;
@@ -111,6 +107,10 @@ a:hover
 	text-decoration: underline;
     color: black;
 }
+.loisir
+{
+	margin-top: 680px; /*A MODIFIER NE MARCHE PAS CORRECTEMENT QUAND ON REDUIT LA PAGE EN LARGEUR*/
+}
 .aside_loisir_icons
 {
 	display: flex;
@@ -126,10 +126,10 @@ section
 	flex: 2;
 	background-color: #FFEBCD;
 	padding: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 50px;
+    padding-left: 30px;
     min-width: 500px;
-    max-width: 1000px;
+    max-width: 1024px;
 
 }
 section h3
@@ -208,10 +208,6 @@ section img
    	aside h3
    	{
    		font-size: 1.7em;
-   	}
-   	p
-   	{
-   		font-size: 1.6em;
    	}
 	.Adresse
 	{
